--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.24.0",
+    "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "element-ui": "^2.15.6",
+    "firebase": "^9.5.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
   },
